# openmc

./: .gitignore  current_work_refs.txt  matching_bins_refs.txt  material_xs_refs.txt  micro_xs_refs.txt  readme.rst  test_basic_master.output  trace_refs.txt
profiles/n1e5/: hm.eband1.profile  hm.eband500.profile  hm.master.profile
rons_tests/: copy_struct_test.F90
src/: CMakeLists.txt  DEPENDENCIES  Makefile  ace.F90  bank_header.F90  basic_omp.cobaltlog  basic_omp.error  basic_omp.output  basic_omp_noostl.cobaltlog  basic_omp_noostl.error  basic_omp_noostl.output  constants.F90  core.0  cross_section.F90  data_dump.F90  eigenvalue.F90  energy_banding.F90  finalize.F90  fission_bank_lib.F90  fixed_source.F90  geometry.F90  getcpu.c  global.F90  initialize.F90  input_xml.F90  inv_stack_batch.pl  job_script.sh  jobscript.sh  main.F90  openmpi_runs.sh  output.F90  output_1_16  output_2_8  output_interface.F90  particle_1_5.binary  particle_header.F90  particle_restart.F90  particle_restart_write.F90  physics.F90  plot.F90  (+16 more)
src/data_dump/: nuclides_info_full.txt
src/new_utils/: plot_source.py
src/output.small_hm/: output.rank_1.thread_16.txt  output.rank_16.thread_1.txt  output.rank_2.thread_8.txt  output.rank_4.thread_4.txt  output.rank_8.thread_2.txt
src/profiles/: UEG_granular.profile  nonUEG_granular.profile
src/scorep.rank_1.thread_16/: output.rank_1.thread_16.txt  profile.cubex  scorep.cfg
src/scorep.rank_16.thread_1/: output.rank_16.thread_1.txt  profile.cubex  scorep.cfg
src/scorep.rank_2.thread_8/: output.rank_2.thread_8.txt  profile.cubex  scorep.cfg
src/scorep.rank_4.thread_4/: output.rank_4.thread_4.txt  profile.cubex  scorep.cfg
src/scorep.rank_8.thread_2/: output.rank_8.thread_2.txt  profile.cubex  scorep.cfg
src/test_initialize_error/: basic_omp.cobaltlog  basic_omp.error  basic_omp.output  basic_omp_noostl.cobaltlog  basic_omp_noostl.coredump  basic_omp_noostl.error  basic_omp_noostl.output  fixed_source_omp.cobaltlog  fixed_source_omp.error  fixed_source_omp.output  fixed_source_omp_noostl.cobaltlog  fixed_source_omp_noostl.error  fixed_source_omp_noostl.output
src/utils/: inv_stack_batch.py
src/xml/: Makefile
src/xml-fortran/: Makefile
test_statepoints/: test_filter_mesh_2d.output  test_filter_mesh_2d.statepoint.txt
tests/test_basic/: settings.xml
tests/test_basic_nofission/: settings.xml
(+3 files in other folders)
